brands/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: brands-ms-istio-payments-dev
    version: v1
  name: brands-ms-istio-payments-dev
  namespace: istio-payments-dev
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: brands-ms-istio-payments-dev
    version: v1
  type: ClusterIP
